[tool.poetry]
name = "MLModelCloud"
version = "0.1.0"
description = ""
authors = ["dbaeza <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pre-commit = "^3.6.0"
detect-secrets = "^1.4.0"
autopep8 = "2.0.4"
flake8 = "^7.0.0"
pytest = "^8.0.0"
requests = "^2.31.0"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pylint = "^3.1.0"
sphinx = "^7.3.7"
numpydoc = "^1.7.0"
sphinx-rtd-theme = "^2.0.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
